deployment.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: myapp-nginx 
  labels:
    app: myapp 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: nginx:1.14.2 
        ports:
        - containerPort: <Port>
