pod.yml
###we know that all the intraction to your k8s cluster happen through api
apiVersion: v2
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: nginx:1.14.2
    ports:
      - containerPort: 80
