podover.yml
apiVersion: v1
kind: Pod
metadata:
  name: quota-mem
spec:
  containers:
  - name: quota-mem-ctr
    image: nginx 
    resources:
      limits:
        memory: "1Gi"
        cpu: "800m"
      requests:
        memory: "700Mi"
        cpu: "400m"
