readynessprobes.yml
apiVersion: v1
kind: Pod
metadata:
  name: proxy-failure
  labels:
    name: proxy 
  namespaces: dev 
spec:
  containers:
  - name: proxy 
    image: k8s.gcr.io/goproxy:0.1
    ports:
      - containerPort: 8080 
    readinessProbe:
      tcpSocker:
        port: 8081 
      initialDelaySeconds: 5 
        periodSeconds: 10 
    livenssProbe:
      tcpSocket:
        port: 8080 
      initialDelaySeconds: 15 
        periodSeconds: 20

######
readinessProbe:
  exec: 
    command: 
      - cat 
      - java -jar application.jar
      - python app.py 
readinessProbe:
  httpGet
    path: /app 
    port: 8080
