initservice.yml
apiVersion: v1 
kind: Service 
metadata:
  name: myservice 
spec:
  ports:
  - portocol: TCP
    port: 80 
    targetPort: 9376
