livenessprobes.yml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: k8s-probes
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: nginx
      
  template:
    metadata:
      labels:
        app: nginx 
    spec:
      containers:
      - name: nginx 
        image: nginx
        ports:
        - containerPort: 80
        ##create a deployment create liveness probes inside that create a pass and failure probes you need to do it in http request
        livenessProbe:
          initialDelaySeconds: 1
          periodSeconds: 2 
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 1 
          httpGet:
            host:
              scheme: HTTP 
            path: /
            httpHeaders:
              - name: Host 
                value: application1.com 
            port: 80
---
apiVersion: v1 
kind: Service
metadata:
  name: nginx 
spec:
  selector:
    app: nginx 
  ports: nginx-http-port
  - port: 80
    targetPort: 80 
  type: NodePort
