service.yml
apiVersion: v1 

kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: myapp
    app1: myapp1 
  ports:
  - port: 80
    targetPort: 80
