cassandra.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cassandra
  namespace: cassandra 
spec:
  podSelector:
    matchLabels:
      run: cassandra 
  policyTypes:
  - Ingress 
  ingress:
  - to:
        
        - podSelector:
            matchLabels:
              ns: default
