networkpolicyingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend 
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: backend  
  policyTypes:
  - Ingress 
  - Egress 
  ingress:
  - from:
        - podSelector:
            matchLabels:
              run: frontend
  egress:
    - to:
       - namespaceSelector:
           matchLabels:
             ns: cassandra
